Updating the letters

--- a/Principal.kv
+++ b/Principal.kv
@@ -294,7 +294,7 @@
                 on_press: root.letra = "Z"
                 on_release: root.identifica_letra()
             ImageButton:
-                source:"alphabet/CS.png"
+                source:"alphabet/Ç.png"
                 id:ç
                 text: 'Ç'
                 size_hint: 0.2,0.2
