Fixing some bugs on the menu

--- a/Principal.kv
+++ b/Principal.kv
@@ -9,7 +9,9 @@
 	id: pop
     size_hint: .7,.3
     auto_dismiss: False
-    title: self.title 
+    title: self.title
+    title_align: 'center'
+    title_size:18
     BoxLayout:
     	spacing: '5dp'
         size_hint:.2,.2
@@ -27,7 +29,9 @@
 	id: pop_desistir
     size_hint: .7,.3
     auto_dismiss: False
-    title: self.title 
+    title: self.title
+    title_align: 'center'
+    title_size:18
     BoxLayout:
     	spacing: '5dp'
         size_hint:.2,.2
