--- a/Principal.kv
+++ b/Principal.kv
@@ -97,6 +97,9 @@
                 markup: True
                 halign: 'center'
                 valign: 'top'
+                font_name: 'fonts\Colored Crayons.ttf'
+                font_size: '50dp'
+
 
         StackLayout:
         	padding:'12dp'
@@ -108,6 +111,8 @@
                 halign: "center"
                 valign: "top"
                 multiline: True
+                font_name: 'fonts\Colored Crayons.ttf'
+                font_size: '50dp'
 
         GridLayout:
             rows:3
